example/dsr/KubernetesConfig/citrix-k8s-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cic-k8s-ingress-controller
spec:
  selector:
    matchLabels:
      app: cic-k8s-ingress-controller
  replicas: 1
  template:
    metadata:
      name: cic-k8s-ingress-controller
      labels:
        app: cic-k8s-ingress-controller
      annotations:
    spec: 
      serviceAccountName: cic-k8s-role
      containers:
      - name: cic-k8s-ingress-controller
        image: "quay.io/netscaler/netscaler-k8s-ingress-controller:4.1.17"
        args:
          - --ingress-classes
            dsr
          - --feature-node-watch
            false
        imagePullPolicy: Always
