example/dsr/KubernetesConfig/citrix-k8s-cpx-ingress.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-ingress
spec:
  selector:
    matchLabels:
      app: cpx-ingress
  replicas: 1
  template:
    metadata:
      name: cpx-ingress
      labels:
        app: cpx-ingress
      annotations:
    spec:
      serviceAccountName: cpx-ingress-k8s-role
      containers:
        - name: cpx-ingress
          image: "quay.io/netscaler/netscaler-cpx:14.1-66.59"
          securityContext:
             privileged: true
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /cpx/conf/
              name: cpx-volume1
            - mountPath: /cpx/crash/
              name: cpx-volume2
        # Add cic as a sidecar
        - name: cic
          image: "quay.io/netscaler/netscaler-k8s-ingress-controller:4.1.17"
          args:
            - --ingress-classes
              dsr-tier2
          imagePullPolicy: Always
      volumes:
      - name: cpx-volume1
        configMap:
           name: cpx-config
      - name: cpx-volume2
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: cpx-service
  labels:
    app: cpx-service
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    app: cpx-ingress
