example/dsr/KubernetesConfig/guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.citrix.com/frontend-ip: x.x.x.x
  name: guestbook-ingress
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  ingressClassName: dsr-tier2
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: dsr-tier2
spec:
  controller: citrix.com/ingress-controller
---
