example/dsr/KubernetesConfig/vpx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.citrix.com/deployment: dsr
    ingress.citrix.com/frontend-ip: x.x.x.x
  name: cpx-ingress
spec:
  defaultBackend:
    service:
      name: cpx-service
      port:
        number: 80
  ingressClassName: dsr
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: dsr
spec:
  controller: citrix.com/ingress-controller
---
